# pattern_mining_football

./: .gitignore  README.md  pyproject.toml
notebooks/: data_playground.ipynb  man_city.ipynb
src/pmf_data/: __init__.py  frames.py  io.py  loaders.py  names.py  paths.py  pitch.py  sequences.py
src/pmf_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
